--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.11.0",
     "redux-devtools-extension": "^2.13.9",
+    "stripe": "^8.222.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
